project/overlays/prod/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 4
  template:
    spec:
      containers:
        - name: myapp
          resources:
            limits:
              cpu: "750m"
              memory: "1Gi"
