project/overlays/prod/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name
spec:
  rules:
    - host: myapp.example.ru
